Version 1.1 release, added a check to make sure the lines aren't too long for text chat.

--- a/tf2-chatterbox/index.css
+++ b/tf2-chatterbox/index.css
@@ -57,7 +57,7 @@ textarea {
 
 #container {
   width: 100%;
-  /*height: 100%;*/
+  height: 100%;
 }
 
 #content {
